--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>3metrics.GitHub.io by 3metrics</title>
+    <title>GitHub.io by 3metrics</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>3metrics.GitHub.io</h1>
+        <h1>GitHub.io</h1>
         <h2></h2>
         <a href="https://github.com/3metrics" class="button"><small>Follow me on</small> GitHub</a>
       </div>
